--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,3 @@
-version_major=0
-version_minor=0
-version_revis=1
-archivebase=SBM-NoMoreRain
-groupid=sbm-nomorerain
-org=builtbroken
+# Sets default memory used for gradle commands. Can be overridden by user or command line properties.
+# This is required to provide enough memory for the Minecraft decompilation process.
+org.gradle.jvmargs=-Xmx2G
